Fixed alignment

--- a/src/components/sign-in/style.scss
+++ b/src/components/sign-in/style.scss
@@ -38,7 +38,7 @@
 
 .title {
     font-family: 'Pacifico', cursive;
-    font-size: 75px;
+    font-size: 3.5em;
     color: white;
     text-align: center;
 }
