--- a/src/routes/assignments/style.scss
+++ b/src/routes/assignments/style.scss
@@ -3,11 +3,19 @@
 	min-height: 100%;
 	width: 100%;
 	margin: 56px 0 56px 0;
+	span {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		padding-bottom: 20px;
+	}
 	footer {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
 		button {
 			float: right;
-			width: 20%;
-			margin: 0px 20px;
+			margin: 0px 10px;
 		}
 	}
 }
