--- a/src/routes/upcoming/style.scss
+++ b/src/routes/upcoming/style.scss
@@ -1,15 +1,12 @@
 .container {
-	padding: 0px 20px;
+	padding: 20px 10%;
 	min-height: 100%;
 	width: 100%;
 	margin: 56px 0 56px 0;
 	article {
-		padding: 20px 0;
 		display: flex;
 		flex-direction: row;
-		justify-content: center;
-	}
-	footer {
-		background-color: #DDD;
+		justify-content: space-between;
+		align-items: center;
 	}
 }
